--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 				</div>
 				<div class="p02-period">
 					<p>
-Звітний (податковий) період
+						Звітний (податковий) період
 					</p>
 				</div>
 				<div class="p02-input1">
-					<input type="text" placeholder="(рік)" value="">
+					<input type="text" placeholder="_____________" value="">
 				</div>
 				<div class="p02-input2">
-					<input type="text" placeholder="(місяць)" value="">
+					<input type="text" placeholder="_____________" value="">
 				</div>
 			</div>
 			<div class="p02 mb">
@@ -63,27 +63,57 @@
 				</div>
 				<div class="p02-period">
 					<p>
-Звітний (податковий) період
+						Звітний (податковий) період
 					</p>
 				</div>
 				<div class="p02-input1">
-					<input type="text" placeholder="(рік)" value="">
+					<input type="text" placeholder="_____________" value="">
 				</div>
-				<div class="p02-input2">
-					<input type="text" placeholder="(квартал)" value="">
+				<div class="p02-input2 kv">
+					<input type="text" placeholder="_____________" value="">
 				</div>
 				<div class="p02-input3">
-					<input type="text" placeholder="(місяць)" value="">
+					<input type="text" placeholder="_____________" value="">
 				</div>
 			</div>
-			<div class="p031">
+			<div class="p031 mb">
 				<div class="number">
 					<span>
 						031
 					</span>
 				</div>
 				<div class="p031-input">
-<input type="text" placeholder="Відмітка про те, що показники цього звітного (податкового) періоду вже уточнювалися раніше" value="">
+					<input type="text"
+						placeholder="_____________"
+						value="">
+						<p>
+						Відмітка про те, що показники цього звітного (податкового) періоду вже уточнювалися раніше
+						</p>
+				</div>
+			</div>
+			<div class="p04 mb">
+				<div class="p04 number">
+					<span>04</span>
+				</div>
+				<div class="p04-right">
+					<p>
+						Платник
+					</p>
+				</div>
+				<div class="p04-inputs">
+					<div class="p04-input1">
+						<input type="text"
+							placeholder="_________________________________________________________________________________________________________________________________________________________________________"
+							value="">
+					</div>
+					<div class="p04-column">
+						<div class="p04-input2">
+							<span>від</span><input type="text" placeholder="_____________" value="">
+						</div>
+						<div class="p04-input3">
+							<span>№</span><input type="text" placeholder="_____________" value="">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
