--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
 					</span>
 				</div>
 				<div class="p031-input">
-					<input type="text"
-						placeholder="_____________"
-						value="">
-						<p>
+					<input type="text" placeholder="_____________" value="">
+					<p>
 						Відмітка про те, що показники цього звітного (податкового) періоду вже уточнювалися раніше
-						</p>
+					</p>
 				</div>
 			</div>
 			<div class="p04 mb">
@@ -114,6 +112,34 @@
 							<span>№</span><input type="text" placeholder="_____________" value="">
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="p041 mb">
+				<div class="p041 number">
+					<span>041</span>
+				</div>
+				<div class="p041-text">
+					<p>
+						Податковий номер платника податку
+						1 або серія (за наявності) та номер паспорта
+						2
+					</p>
+				</div>
+				<div class="p041-input">
+					<input type="text" value="" placeholder="_____________">
+				</div>
+			</div>
+			<div class="p041 mb">
+				<div class="p041 number">
+					<span>04</span>
+				</div>
+				<div class="p041-text">
+					<p>
+						Індивідуальний податковий номер платника податку на додану вартість
+					</p>
+				</div>
+				<div class="p041-input">
+					<input type="text" value="" placeholder="_____________">
 				</div>
 			</div>
 		</div>
