--- a/index.html
+++ b/index.html
@@ -142,6 +142,37 @@
 					<input type="text" value="" placeholder="_____________">
 				</div>
 			</div>
+			<div class="p06 mb">
+				<div class="p06 number">
+					<span>06</span>
+				</div>
+				<div class="p06-adres">
+					<p>
+Податкова адреса
+					</p>
+					<input type="text" value="" placeholder="________________________________________________________________________________________________________">
+				</div>
+				<div class="p06-body">
+					<div class="p06-body__index">
+						<p>
+							Поштовий індекс
+						</p>
+						<input type="text" value="" placeholder="_____________">
+					</div>
+					<div class="p06-body__tel">
+						<p>
+							Телефон
+						</p>
+						<input type="tel" value="" placeholder="_____________">
+					</div>
+					<div class="p06-body__mail">
+						<p>
+							Електронна адреса
+						</p>
+						<input type="email" value="" placeholder="_____________">
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
