--- a/index.html
+++ b/index.html
@@ -148,9 +148,10 @@
 				</div>
 				<div class="p06-adres">
 					<p>
-Податкова адреса
+						Податкова адреса
 					</p>
-					<input type="text" value="" placeholder="________________________________________________________________________________________________________">
+					<input type="text" value=""
+						placeholder="________________________________________________________________________________________________________">
 				</div>
 				<div class="p06-body">
 					<div class="p06-body__index">
@@ -170,6 +171,87 @@
 							Електронна адреса
 						</p>
 						<input type="email" value="" placeholder="_____________">
+					</div>
+				</div>
+			</div>
+			<div class="p-tex mb">
+				<div class="p-tex__p">
+					<p>
+						Розрахунок подається до
+					</p>
+				</div>
+				<div class="p-tex__input">
+					<input type="text" value=""
+						placeholder="________________________________________________________________________________________________________________________________________________________________________________________________________________">
+				</div>
+			</div>
+			<div class="hed">
+				<div class="hed-row row">
+					<span>
+						Код
+						рядка
+
+					</span>
+				</div>
+				<div class="hed-dod dod">
+					<span>
+						Код
+						додатка
+					</span>
+				</div>
+				<div class="hed-cente centr">
+					Рядки декларації
+				</div>
+				<div class="hed-text">
+					<div class="hed-text__1">
+						<p>
+							Показник, який
+							уточнюється
+						</p>
+					</div>
+					<div class="hed-text__2">
+						<p>
+							Уточнений
+							показник
+						</p>
+					</div>
+					<div class="hed-text__3">
+						<p>
+							Різниця
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="hed2 mb">
+				<div class="hed-row row">
+					<span>
+						1
+
+					</span>
+				</div>
+				<div class="hed-dod dod">
+					<span>
+						2
+					</span>
+				</div>
+				<div class="hed-cente centr">
+					3
+				</div>
+				<div class="hed-text">
+					<div class="hed-text__1">
+						<p>
+							4
+						</p>
+					</div>
+					<div class="hed-text__2">
+						<p>
+							5
+						</p>
+					</div>
+					<div class="hed-text__3">
+						<p>
+							6
+						</p>
 					</div>
 				</div>
 			</div>
