--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						placeholder="________________________________________________________________________________________________________________________________________________________________________________________________________________">
 				</div>
 			</div>
-			<div class="hed">
+			<div class="hed hed1">
 				<div class="hed-row row">
 					<span>
 						Код
@@ -222,7 +222,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="hed2 mb">
+			<div class="hed2">
 				<div class="hed-row row">
 					<span>
 						1
@@ -252,6 +252,67 @@
 						<p>
 							6
 						</p>
+					</div>
+				</div>
+			</div>
+			<div class="w100">
+				<p>
+					I. Податкові зобов'язання
+				</p>
+			</div>
+			<div class="hed">
+				<div class="row">
+					<span>
+						1.1
+
+					</span>
+				</div>
+				<div class="dod">
+					<span>
+						Д1
+					</span>
+				</div>
+				<div class="centr-rr center">
+					<p>
+						Операції на митній території України, що оподатковуються за основною ставкою, крім ввезення товарів на
+						митну
+						територію України
+					</p>
+					<div class="centr-col">
+						<div class="hed-text__1">
+							<p>
+								Колонка А
+							</p>
+						</div>
+						<div class="hed-text__2">
+							<p>
+								Колонка Б
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="hed-text__col">
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+					</div>
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="__________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
 					</div>
 				</div>
 			</div>
