--- a/index.html
+++ b/index.html
@@ -316,6 +316,230 @@
 					</div>
 				</div>
 			</div>
+			<div class="hed">
+				<div class="row">
+					<span>
+						1.2
+
+					</span>
+				</div>
+				<div class="dod">
+					<span>
+						Д1
+					</span>
+				</div>
+				<div class="centr-rr center">
+					<p>
+						Операції на митній території України, що оподатковуються за ставкою 7 %, крім ввезення товарів на митну територію
+						України
+					</p>
+					<div class="centr-col">
+						<div class="hed-text__1">
+							<p>
+								Колонка А
+							</p>
+						</div>
+						<div class="hed-text__2">
+							<p>
+								Колонка Б
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="hed-text__col">
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+					</div>
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="__________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hed">
+				<div class="row">
+					<span>
+						1.3
+
+					</span>
+				</div>
+				<div class="dod">
+					<span>
+						Д1
+					</span>
+				</div>
+				<div class="centr-rr center">
+					<p>
+					Операції на митній території України, що оподатковуютьсяза ставкою 14 %, крім ввезення товарів на митну територію
+					України
+					</p>
+					<div class="centr-col">
+						<div class="hed-text__1">
+							<p>
+								Колонка А
+							</p>
+						</div>
+						<div class="hed-text__2">
+							<p>
+								Колонка Б
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="hed-text__col">
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+					</div>
+					<div class="col">
+						<div class="hed-text__1">
+							<input type="email" value="" placeholder="__________">
+						</div>
+						<div class="hed-text__2">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+						<div class="hed-text__3">
+							<input type="email" value="" placeholder="_____________">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- === -->
+						<div class="hed">
+							<div class="row">
+								<span>
+									2.1
+						
+								</span>
+							</div>
+							<div class="dod">
+								<span>
+									Д1
+								</span>
+							</div>
+							<div class="centr-rr on center">
+								<p>
+								Операції з вивезення товарів за межі митної території України, що оподатковуються за нульовою ставкою
+								</p>
+								<div class="centr-col ">
+									<div class="hed-text__1">
+										<p>
+											Колонка А
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="hed-text__col on">
+								<div class="col ">
+									<div class="hed-text__1">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__2">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__3">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="hed">
+							<div class="row">
+								<span>
+									2.2
+						
+								</span>
+							</div>
+							<div class="dod">
+								<span>
+									Д1
+								</span>
+							</div>
+							<div class="centr-rr on center">
+								<p class="wid">
+						Операції з вивезення товарів за межі митної території України, що звільнені від оподаткування
+								</p>
+								<div class="centr-col">
+									<div class="hed-text__1">
+										<p>
+											Колонка А
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="hed-text__col on">
+								<div class="col ">
+									<div class="hed-text__1">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__2">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__3">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="hed">
+							<div class="row">
+								<span>
+									3
+								</span>
+							</div>
+							<div class="dod">
+								<span>
+									Д1
+								</span>
+							</div>
+							<div class="centr-rr on center">
+								<p class="wid">
+						Інші операції, що оподатковуються за нульовою ставкою
+								</p>
+								<div class="centr-col">
+									<div class="hed-text__1">
+										<p>
+											Колонка А
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="hed-text__col on">
+								<div class="col ">
+									<div class="hed-text__1">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__2">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+									<div class="hed-text__3">
+										<input type="email" value="" placeholder="_____________">
+									</div>
+								</div>
+							</div>
+						</div>
 		</div>
 	</div>
 </body>
